--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="icon" href="icons/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 </head>
 <body>
 
@@ -31,11 +33,11 @@
                 <form id="login-form">
                     <div class="form-group">
                         <label for="login-email">Email</label>
-                        <input type="email" id="login-email" name="email" required>
+                        <input type="email" id="login-email" name="email" required autocomplete="email">
                     </div>
                     <div class="form-group">
                         <label for="login-password">Mot de passe</label>
-                        <input type="password" id="login-password" name="password" required>
+                        <input type="password" id="login-password" name="password" required autocomplete="current-password">
                     </div>
                     <button type="submit" class="btn btn-primary">Se connecter</button>
                 </form>
@@ -49,15 +51,15 @@
                 <form id="signup-form">
                      <div class="form-group">
                         <label for="signup-email">Email</label>
-                        <input type="email" id="signup-email" name="email" required>
+                        <input type="email" id="signup-email" name="email" required autocomplete="email">
                     </div>
                     <div class="form-group">
                         <label for="signup-password">Mot de passe</label>
-                        <input type="password" id="signup-password" name="password" required>
+                        <input type="password" id="signup-password" name="password" required autocomplete="new-password">
                     </div>
                      <div class="form-group">
                         <label for="signup-confirm-password">Confirmer le mot de passe</label>
-                        <input type="password" id="signup-confirm-password" name="confirm_password" required>
+                        <input type="password" id="signup-confirm-password" name="confirm_password" required autocomplete="new-password">
                     </div>
                     <button type="submit" class="btn btn-primary">S'inscrire</button>
                 </form>
